dialog: fix incorrect button horizontal alignment

--- a/components/complex/dialog/style.scss
+++ b/components/complex/dialog/style.scss
@@ -110,7 +110,6 @@ $dialog__unit-width: dp(56);
   margin: dp(8) 0;
   .mdw-button {
     margin: 0;
-    justify-content: flex-end;
     &:last-child {
       margin: 0 dp(8);
     }
